fix minor layout error

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!--descripcion desktop--> 
   <div class="container d-none d-lg-block">
     <p class="descripcion-desktop"><strong>Renault</strong> te la posibilidad de acceder, mediante el pago de cuotas mensuales en pesos, y de bajo monto, sin anticipos ni requisitos de ingresos, a los vehículos de la amplia gama de modelos que <strong>Renault</strong> pensó para vos, facilitándote el acceso al mismo, prestándote una alta calidad de servicio y atención.</p>
-    <p class="descripcion">Financiá con <strong>Renault</strong> porque es ideal para acceder a tu 0km cubriendo mínimas cuotas sin interés, rentables y seguras, con <strong>entrega por fábrica a partir de la cuota 2 y múltiples beneficios.</strong></p>
+    <p class="descripcion-desktop">Financiá con <strong>Renault</strong> porque es ideal para acceder a tu 0km cubriendo mínimas cuotas sin interés, rentables y seguras, con <strong>entrega por fábrica a partir de la cuota 2 y múltiples beneficios.</strong></p>
     <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/promo-banner.jpg">
     <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/kwid-banner.jpg">
     <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/logan-banner.jpg">
@@ -115,7 +115,7 @@
     <img class="mx-auto p-2 d-block img-fluid" src="img/desktop/stepway-banner.jpg">
   </div>
 <!--descripcion responsive--> 
-  <div class="container .d-none .d-lg-block .d-xl-none">
+  <div class="container d-lg-none">
     <p class="descripcion-mobile"><strong>Plan Renault</strong> te permite acceder a tu <strong>Renault 0 KM</strong>. Totalmente en cuotas sin interés, y además te brinda muchísimas ventajas para hacerte todo mucho más fácil.</p>
     <p class="separador"><img class="mx-auto p-2 d-block img-fluid" alt="Promoción Plan Renault" src="img/mobile/promo-banner-mobile.jpg"></p>
     <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/kwid-banner-mobile.jpg"></p>
