add js scripts and modals

--- a/index.html
+++ b/index.html
@@ -181,22 +181,6 @@
 <!--scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      $(window).scroll(function () {
-        if ($(this).scrollTop() > 50) {
-          $('#back-to-top').fadeIn();
-        } else {
-          $('#back-to-top').fadeOut();
-      }
-    });
-      $('#back-to-top').click(function () {
-        $('body,html').animate({
-          scrollTop: 0
-        }, 400);
-        return false;
-      });
-      });
-  </script>
+  <script src="js/plan-renault.js"></script>
 </body>
 </html>
