--- a/kwid.html
+++ b/kwid.html
@@ -35,8 +35,8 @@
             <a class="dropdown-item" href="kangoo.html">Kangoo</a>
             <a class="dropdown-item" href="sandero.html">Sandero</a>
             <a class="dropdown-item" href="stepway.html">Sandero Stepway</a>
-            <a class="dropdown-item" href="stepway.html">Duster</a>
-            <a class="dropdown-item" href="stepway.html">Oroch</a>
+            <a class="dropdown-item" href="duster.html">Duster</a>
+            <a class="dropdown-item" href="oroch.html">Oroch</a>
           </div>
         </li>
         <li class="nav-item">
