--- a/stepway.html
+++ b/stepway.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Plan Renault - Financiación de tu Renault 0km Directa de Fábrica, Sin Interés y en Pesos">
   <meta name="keywords" content="plan, renault, financiacion, fabrica, sin interes, pesos, 0km, nuevo, cuotas, gobierno, precio, clio, kangoo, fluence, megane, twingo, laguna, sandero, duster, logan">
-  <title>Renault Logan | Plan Renault</title>
+  <title>Renault Kangoo | Plan Renault</title>
   <link rel="icon" href="img/cropped-logo-renault.png" sizes="192x192">
   <link rel="canonical" href="https://www.plan-renault.com.ar/">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
@@ -54,45 +54,50 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1 class="form-title">Renault Logan</h1>
+    <h1 class="form-title">Renault Sandero Stepway</h1>
  </div> 
 </header>
 <!--galeria de fotos--> 
   <div class="container text-center">
-    <img src="img/logan/logan-1.jpg" class="img-fluid" alt="renault logan">
+    <img src="img/stepway/stepway-1.jpg" class="img-fluid" alt="renault stepway">
     <div class="row">
       <div class="col p-0">
         <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-2.jpg" alt="renault logan">
+          <img class="img-fluid thumb" src="img/stepway/stepway-2.jpg" alt="renault stepway">
         </a>
       </div>
       <div class="col p-0">
         <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-3.jpg" alt="renault logan">
+          <img class="img-fluid thumb" src="img/stepway/stepway-3.jpg" alt="renault stepway">
         </a>
       </div>
       <div class="col p-0">
         <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-4.jpg" alt="renault logan">
+          <img class="img-fluid thumb" src="img/stepway/stepway-4.jpg" alt="renault stepway">
         </a>
       </div>
       <div class="col p-0">
         <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-5.jpg" alt="renault logan">
+          <img class="img-fluid thumb" src="img/stepway/stepway-5.jpg" alt="renault stepway">
         </a>
       </div>
       <div class="col p-0">
         <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-6.jpg" alt="renault logan">
+          <img class="img-fluid thumb" src="img/stepway/stepway-6.jpg" alt="renault stepway">
         </a>
       </div>
     </div> 
   </div> 
 <!--pop-ups imágenes galería-->
 <div id="modal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <img src="" class="img-responsive" id="show-img"> 
+      <div class="modal-body">
+        <img src="" class="img-responsive" id="show-img"> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+      </div>
     </div>
   </div>
 </div>  
