--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <a class="dropdown-item" href="kangoo.html">Kangoo</a>
             <a class="dropdown-item" href="sandero.html">Sandero</a>
             <a class="dropdown-item" href="stepway.html">Sandero Stepway</a>
-            <a class="dropdown-item" href="stepway.html">Duster</a>
-            <a class="dropdown-item" href="stepway.html">Oroch</a>
+            <a class="dropdown-item" href="duster.html">Duster</a>
+            <a class="dropdown-item" href="oroch.html">Oroch</a>
           </div>
         </li>
         <li class="nav-item">
@@ -63,29 +63,29 @@
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active" style="background-image:url(img/desktop/kwid-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Renault Kwid</h3>
-          <p>El SUV de los compactos.</p>
+          <h3 class="carousel-h3">Renault Kwid</h3>
+          <p class="carousel-p">El SUV de los compactos.</p>
           <button class="btn btn-warning btn-lg">+ Info</button>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/kangoo-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Renault Kangoo</h3>
-          <p>Un automóvil, utilitario, familiar.</p>
+          <h3 class="carousel-h3">Renault Kangoo</h3>
+          <p class="carousel-p">Un automóvil, utilitario, familiar.</p>
           <button class="btn btn-warning btn-lg">+ Info</button>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/oroch-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Renault Oroch</h3>
-          <p>Una pickup diferente a todo lo que ya viste.</p>
+          <h3 class="carousel-h3">Renault Oroch</h3>
+          <p class="carousel-p">Una pickup diferente a todo lo que ya viste.</p>
           <button class="btn btn-warning btn-lg">+ Info</button>
         </div>
       </div>
       <div class="carousel-item" style="background-image:url(img/desktop/sandero-header.jpg)">
         <div class="carousel-caption d-none d-md-block">
-          <h3>Renault Sandero Stepway</h3>
-          <p>Viví el momento donde quiera que estés.</p>
+          <h3 class="carousel-h3">Renault Sandero Stepway</h3>
+          <p class="carousel-p">Viví el momento donde quiera que estés.</p>
           <button class="btn btn-warning btn-lg">+ Info</button>
         </div>
       </div>
