--- a/que-es-plan-renault.html
+++ b/que-es-plan-renault.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Plan Renault - Financiación de tu Renault 0km Directa de Fábrica, Sin Interés y en Pesos">
   <meta name="keywords" content="plan, renault, financiacion, fabrica, sin interes, pesos, 0km, nuevo, cuotas, gobierno, precio, clio, kangoo, fluence, megane, twingo, laguna, sandero, duster, logan">
-  <title>Renault Logan | Plan Renault</title>
+  <title>¿Qué es Plan Renault? | Plan Renault</title>
   <link rel="icon" href="img/cropped-logo-renault.png" sizes="192x192">
   <link rel="canonical" href="https://www.plan-renault.com.ar/">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/plan-renault.css" rel="stylesheet">
 </head>
@@ -54,65 +53,27 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1 class="form-title">Renault Logan</h1>
+    <h1 class="form-title">¿Qué es Plan Renault?</h1>
  </div> 
 </header>
-<!--galeria de fotos--> 
-  <div class="container text-center">
-    <img src="img/logan/logan-1.jpg" class="img-fluid" alt="renault logan">
-    <div class="row">
-      <div class="col p-0">
-        <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-2.jpg" alt="renault logan">
-        </a>
-      </div>
-      <div class="col p-0">
-        <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-3.jpg" alt="renault logan">
-        </a>
-      </div>
-      <div class="col p-0">
-        <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-4.jpg" alt="renault logan">
-        </a>
-      </div>
-      <div class="col p-0">
-        <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-5.jpg" alt="renault logan">
-        </a>
-      </div>
-      <div class="col p-0">
-        <a href="#" class="d-block my-4 h-100">
-          <img class="img-fluid thumb" src="img/logan/logan-6.jpg" alt="renault logan">
-        </a>
-      </div>
-    </div> 
-  </div> 
-<!--pop-ups imágenes galería-->
-<div id="modal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <img src="" class="img-responsive" id="show-img"> 
-    </div>
-  </div>
-</div>  
 <!--descripcion-->
   <div class="container">
-    <h1 class="form-title">Cuota desde $4185</h1>
-    <ul class="detalles-modelos">
-      <li>Valor 0KM: $502200</li>
-      <li>100% FINANCIADO</li>
-      <li>HASTA 120 CUOTAS</li>
-      <li>SIN INTERÉS</li>
-      <li>RETIRÁ DESDE CUOTA 2</li>
-      <li>TODOS LOS MEDIOS DE PAGO</li>
-      <li>Tomamos tu USADO!</li>
-    </ul>
-    <p class="descripcion-desktop">Promoción Exclusiva Renault Argentina – Suscribite <strong>HOY</strong> y recibí una <strong>BONIFICACIÓN DE $50000</strong><br>
-    Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
-  </div>  
+    <p><strong>Plan Rombo Renault</strong> es <strong>fácil</strong>, <strong>funcional</strong>, <strong>práctico</strong>, y se llega a través de una sola decisión <strong>inteligente</strong>. <strong>Plan Rombo Renault</strong> te permite acceder a tu <strong>Renault Okm</strong>. Totalmente en cuotas <strong>sin interés</strong>, y además te brinda todas éstas ventajas para hacerte todo mucho más fácil.</p>
+    <h2>Plan Rombo Renault 100%</h2>
+    <p><img src="img/renault-plan-100.png" alt="Plan Renault de Ahorro 100%" width="64" height="64" class="img-responsive"></p>
+    <p>Esta modalidad consta en que la terminal financia el <strong>100% del auto</strong> en cuotas <strong>sin interés</strong> (hasta en <strong>84 cuotas</strong>). <strong>Único plan en el mercado automotriz que financia el 100% de tu próximo 0KM, sin exigir integración mínima.</strong> Las cuotas incluyen gastos administrativos y seguro de vida.</p>
+    <h2>Plan Rombo Renault 75/25</h2>
+    <p><img src="img/renault-plan-75-25.png" alt="Plan Renault de Ahorro 75/25" width="64" height="64" class="img-responsive"></p>
+    <p><strong>Renault</strong> financia el <strong>75% del auto</strong> en cuotas <strong>sin interés</strong>;(hasta en <strong>84 cuotas</strong>) y el otro <strong>25%</strong> se debe abonar de contado al momento de la entrega del vehículo. Las cuotas incluyen gastos administrativos, seguro de vida y derecho de suscripción.</p>
+    <h2>Cambio de Unidad</h2>
+    <p><img src="img/renault-cambio-de-unidad.png" alt="Plan Renault Cambio de Unidad" width="64" height="64" class="img-responsive"></p>
+    <p>Con <strong>Plan Rombo Renault</strong> cuando resultas adjudicado podés optar por cualquier modelo de la gama que comercializa <strong>Renault</strong>, abonando la diferencia de valor entre los modelos.</p>
+    <h3>Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</h3>
+  </div>
 <!--formulario-->
-  <div class="container">   
+  <div class="container">  
+    <h3 class="form-title">Consultar con un Asesor Oficial Renault</h3>
+    <p class="form-desc">Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
     <form>
       <div class="form-group">
         <label>Nombre</label>
