minor changes to pages

--- a/about.html
+++ b/about.html
@@ -42,10 +42,10 @@
           <a class="nav-link" href="about.html">¿Qué es Plan Renault?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="yatenes.html">¿Ya tenés un plan?</a>
+          <a class="nav-link" href="#contacto">¿Ya tenés un plan?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contacto</a>
+          <a class="nav-link" href="#contacto">Contacto</a>
         </li>
       </ul>
     </div>
@@ -53,25 +53,26 @@
 <!--titulo-->
 <header>
   <div class="container">
-    <h1 class="form-title">¿Qué es Plan Renault?</h1>
+    <h1 class="form-title">¿Qué es Plan Renault?</h1><br>
  </div> 
 </header>
 <!--descripcion-->
   <div class="container">
-    <p><strong>Plan Rombo Renault</strong> es <strong>fácil</strong>, <strong>funcional</strong>, <strong>práctico</strong>, y se llega a través de una sola decisión <strong>inteligente</strong>. <strong>Plan Rombo Renault</strong> te permite acceder a tu <strong>Renault Okm</strong>. Totalmente en cuotas <strong>sin interés</strong>, y además te brinda todas éstas ventajas para hacerte todo mucho más fácil.</p>
+    <p><strong>Plan Rombo Renault</strong> es <strong>fácil</strong>, <strong>funcional</strong>, <strong>práctico</strong>, y se llega a través de una sola decisión <strong>inteligente</strong>. <strong>Plan Rombo Renault</strong> te permite acceder a tu <strong>Renault Okm</strong>. Totalmente en cuotas <strong>sin interés</strong>, y además te brinda todas éstas ventajas para hacerte todo mucho más fácil.</p><br>
     <h2>Plan Rombo Renault 100%</h2>
-    <p><img src="img/renault-plan-100.png" alt="Plan Renault de Ahorro 100%" width="64" height="64" class="img-responsive"></p>
+    <img src="img/renault-plan-100.png" alt="Plan Renault de Ahorro 100%" width="64" height="64" class="img-plan">
     <p>Esta modalidad consta en que la terminal financia el <strong>100% del auto</strong> en cuotas <strong>sin interés</strong> (hasta en <strong>84 cuotas</strong>). <strong>Único plan en el mercado automotriz que financia el 100% de tu próximo 0KM, sin exigir integración mínima.</strong> Las cuotas incluyen gastos administrativos y seguro de vida.</p>
     <h2>Plan Rombo Renault 75/25</h2>
-    <p><img src="img/renault-plan-75-25.png" alt="Plan Renault de Ahorro 75/25" width="64" height="64" class="img-responsive"></p>
+    <img src="img/renault-plan-75-25.png" alt="Plan Renault de Ahorro 75/25" width="64" height="64" class="img-plan">
     <p><strong>Renault</strong> financia el <strong>75% del auto</strong> en cuotas <strong>sin interés</strong>;(hasta en <strong>84 cuotas</strong>) y el otro <strong>25%</strong> se debe abonar de contado al momento de la entrega del vehículo. Las cuotas incluyen gastos administrativos, seguro de vida y derecho de suscripción.</p>
     <h2>Cambio de Unidad</h2>
-    <p><img src="img/renault-cambio-de-unidad.png" alt="Plan Renault Cambio de Unidad" width="64" height="64" class="img-responsive"></p>
-    <p>Con <strong>Plan Rombo Renault</strong> cuando resultas adjudicado podés optar por cualquier modelo de la gama que comercializa <strong>Renault</strong>, abonando la diferencia de valor entre los modelos.</p>
+    <img src="img/renault-cambio-de-unidad.png" alt="Plan Renault Cambio de Unidad" width="64" height="64" class="img-plan">
+    <p>Con <strong>Plan Rombo Renault</strong> cuando resultas adjudicado podés optar por cualquier modelo de la gama que comercializa <strong>Renault</strong>, abonando la diferencia de valor entre los modelos.</p><br>
     <h3>Consulte por Promociones, Premios, y Descuentos Exclusivos por Cierre de Círculos (Hasta Agotar Stock/Fecha de Cierre).</h3>
+    <br>
   </div>
 <!--formulario-->
-  <div class="container">  
+  <div class="container" id="contacto">  
     <h3 class="form-title">Consultar con un Asesor Oficial Renault</h3>
     <p class="form-desc">Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
     <form>
