--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <a class="nav-link" href="about.html">¿Qué es Plan Renault?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="yatenes.html">¿Ya tenés un plan?</a>
+          <a class="nav-link" href="#contacto">¿Ya tenés un plan?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contacto</a>
+          <a class="nav-link" href="#contacto">Contacto</a>
         </li>
       </ul>
     </div>
@@ -127,7 +127,7 @@
     <p class="separador"><img class="mx-auto p-2 d-block img-fluid" src="img/mobile/stepway-banner-mobile.jpg"></p>
   </div>
 <!--formulario-->
-  <div class="container">
+  <div class="container" id="contacto">
     <h3 class="form-title">Consultar con un Asesor Oficial Renault</h3>
     <p class="form-desc">Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>      
     <form>
