--- a/logan.html
+++ b/logan.html
@@ -43,10 +43,10 @@
           <a class="nav-link" href="about.html">¿Qué es Plan Renault?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="yatenes.html">¿Ya tenés un plan?</a>
+          <a class="nav-link" href="#contacto">¿Ya tenés un plan?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contacto</a>
+          <a class="nav-link" href="#contacto">Contacto</a>
         </li>
       </ul>
     </div>
@@ -112,7 +112,7 @@
     Complete el siguiente formulario y un asesor Renault se contactará con usted para brindarle más información</p>  
   </div>  
 <!--formulario-->
-  <div class="container">   
+  <div class="container" id="contacto">   
     <form>
       <div class="form-group">
         <label>Nombre</label>
