--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="canonical" href="https://www.plan-renault.com.ar/">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/plan-renault.css" rel="stylesheet">
 </head>
@@ -19,7 +19,7 @@
 <body>
 <!--menu de navegacion-->    
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html" aria-label="Plan Renault - Financiación de Fábrica, Sin Interés y en Pesos"><img class="logo" src="img/desktop/planrenault-header.png" alt="Volver a la página principal"></a>
+    <a class="navbar-brand" href="index.html" aria-label="Plan Renault - Financiación de Fábrica, Sin Interés y en Pesos"><img class="logo" src="img/logo-renault.png" alt="Volver a la página principal"></a>
   <!--menu responsive-->     
     <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
   <!--fin menu responsive-->   
@@ -177,7 +177,7 @@
   <footer>
     <img class="m-auto d-block img-fluid" src="img/desktop/consultas-banner.jpg">
   </footer>
-  <a id="back-to-top" href="#" class="btn btn-primary-outline btn-lg back-to-top" role="button">&#8593;</a>
+  <a id="back-to-top" href="#" class="btn btn-primary-outline btn-lg back-to-top" role="button"><i class="fas fa-arrow-up"></a>
 <!--scripts-->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
